# cblank_sail

./: .gitignore  CMakeLists.txt  Makefile
scripts/: app_log.txt  compileX64.bat  runX64.bat
src/: Stage.c  Stage.h  defs.h  draw.c  draw.h  init.c  init.h  main.c  structs.h
